--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Slot Car Racer</title>
+    <title>@@GameNamePretty</title>
     <link rel="stylesheet" href="css/game.css" type="text/css" />
     <script src="js/phaser.min.js"></script>
-    <script src="js/SlotCarRacer.js"></script>
+    <script src="js/@@GameName.js"></script>
 </head>
 
 <body>
