Added a project description

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 
 <div id="gameContainer"></div>
 
+<div id="description">
+    <p>
+    This is a prototype I made during one of my mini game jams. I have ceased
+    development as I have started working on a more interesting prototype.
+    </p>
+    <p>
+    The source code is free for all. You can use it however you like. All though
+    it's probably not much to look at since I mashed it togheter in a few hours.
+    </p>
+    <p><a href="https://github.com/mandarinx/SlotCarRacer">https://github.com/mandarinx/SlotCarRacer</a></p>
+</div>
+
 <script type="text/javascript">
 window.onload = function() {
     var game = new Phaser.Game(800, 576, Phaser.CANVAS, 'gameContainer');
